--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="about.html" class="nav-link">About</a>
+            <a href="index3.html" class="nav-link">About</a>
           </li>
           <li class="nav-item">
             <a href="index1.html" class="nav-link">Portfolio</a>
